# Astra

./: .gitignore  Dockerfile  Dockerfile.gpu  NOTICE  README.md  README_zh.md  docker-compose.gpu.yml  docker-compose.yml  mock_pipeline.py  pyproject.toml  requirements.txt  setup.py  wsl_check_kt.py  wsl_inspect_model.py
.clinerules/: project-rules.md
.github/workflows/: ci.yml  hardware_test.yml
astra/: __init__.py
astra/api/: __init__.py  openai_compat.py
astra/config/: __init__.py  model_config.py
astra/inference/: __init__.py  batch_scheduler.py  batch_utils.py  differential_privacy.py  heterogeneous.py  ktransformers_adapter.py  shared_expert_cache.py  speculative.py  tokenizer.py  (+2 more)
docs/: ARCHITECTURE.md  COMPLIANCE.md  FEASIBILITY.md  HIVEMIND.md  INSTALL.md  ROADMAP.md  SECURITY.md  TEE.md  TESTING.md  TLS.md
installer/: install.bat  install.ps1  install.sh  start.bat
scripts/: benchmark.py  build_ktransformers.sh  check_env.py  check_hf_models.py  check_local_config.py  check_v4pro_specs.py  deploy_real_weights.py  load_test.py  probe_dtype.py  run_cluster.py  run_node.py  smoke_kt_adapter.py  test_real_minimax_m2.py  verify_minimax_m2.py  wsl_check_kt_path.py  wsl_inspect_ds_model.py  wsl_kt_check.sh  wsl_kt_verify.sh  wsl_read_registry.sh  wsl_vram_check.py
tests/: __init__.py  test_api.py  test_check_env.py  test_continuous_batching.py  test_dht.py  test_differential_privacy.py  test_engram.py  test_expert_replication.py  test_geo_router.py  test_heterogeneous.py  test_hivemind_bridge.py  test_identity.py  test_kv_transfer.py  test_orchestrator.py  test_phase6.py  test_pipeline_grpc.py  test_rtt.py  test_serialization.py  test_shared_expert_cache.py  test_speculative.py  test_tee.py  test_tls.py  test_tokenizer.py  test_weight_loader.py  test_weight_manifest.py
(+24 files in other folders)
